--- a/hopguides-web/public/index.html
+++ b/hopguides-web/public/index.html
@@ -10,6 +10,7 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+		<link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="./assets/fonts/ionicons.min.css" />
 		<link rel="stylesheet" href="./assets/css/Login-Form-Clean.css" />
 		<link rel="stylesheet" href="./assets/css/styles.css" />
@@ -28,5 +29,6 @@
 		<div id="root"></div>
 
 		<script src="./assets/js/jquery.min.js"></script>
+		<script src="./assets/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
